--- a/index.html
+++ b/index.html
@@ -400,7 +400,7 @@
             <a href="#skills">Skills</a>
             <a href="#achievements">Achievements</a>
             <a href="#contact">Contact</a>
-            <a target="_blank" href="Ogabek_Gafforov_CV.pdf">CV</a>
+            <a target="_blank" href="cv.pdf">CV</a>
         </div>
     </nav>
     
