--- a/index.html
+++ b/index.html
@@ -607,7 +607,7 @@
                 <h2>Contact Me</h2>
                 <div class="contact-info">
                     <p><strong>Address:</strong> Wiertnicza, Warsaw, Poland</p>
-                    <p><strong>Email:</strong> <a href="mailto:ogabekgafforov101@gmail.com">bekforrov@gmail.com</a></p>
+                    <p><strong>Email:</strong> <a href="mailto:bekforov@gmail.com">bekforov@gmail.com</a></p>
                     <p><strong>LinkedIn:</strong> <a href="https://linkedin.com/in/ogabekgafforov" target="_blank">linkedin.com/in/ogabekgafforov</a></p>
                 </div>
                 
