:Initial commit with updated webpage

--- a/index.html
+++ b/index.html
@@ -441,14 +441,14 @@
                 <div class="experience-item">
                     <h3>Video Game Tester</h3>
                     <div class="experience-meta">
-                        <span>Lionbridge Games, Warsaw, Poland</span>
-                        <span>Jun 2024 – Oct 2024</span>
+                        <span>George Dimov CPA, New York, United States</span>
+                        <span>May 2024 – Present</span>
                     </div>
                     <ul class="experience-list">
-                        <li>Tracked bugs in TestRail and reported bugs in Jira</li>
-                        <li>Partnered with developers to resolve critical problems, achieving a 98 percent bug resolution rate</li>
-                        <li>Delivered precise documentation and reports, streamlining communication between QA and development teams</li>
-                        <li>Contributed to improved gameplay mechanics by providing insights into user experience and interface usability</li>
+                        <li>Conducted in-depth analysis of financial operations to uncover cost drivers and streamline reporting processes</li>
+                        <li>Partnered with cross-functional teams to design data pipelines and automate recurring accounting tasks</li>
+                        <li>Delivered insights on client profitability and revenue trends, supporting pricing strategy and service optimization</li>
+                        <li>Synthesized large datasets from internal systems and public sources to support economic impact assessments</li>
                     </ul>
                 </div>
                 
@@ -552,7 +552,7 @@
                         <div class="proficiency">Intermediate</div>
                     </div>
                     <div class="language-item">
-                        <div class="language-name">Kirgiz</div>
+                        <div class="language-name">Kyrgyz</div>
                         <div class="proficiency">Intermediate</div>
                     </div>
                     <div class="language-item">
@@ -609,10 +609,10 @@
                         <strong>Top 5 Graduate, High School:</strong> Graduated with a GPA of 5/5 in the last three years of high school, demonstrating consistent academic excellence.
                     </li>
                     <li>
-                        <strong>IELTS score 6.5:</strong> Demonstrated strong proficiency in English, with a solid grasp across listening, reading, writing, and speaking.
+                        <strong>IELTS:</strong> Demonstrated strong proficiency in English, with a solid grasp across listening, reading, writing, and speaking.
                     </li>
                     <li>
-                        <strong>SAT score 1240:</strong> Scored 530 in English and 710 in Math, showcasing strong problem-solving and analytical skills.
+                        <strong>SAT:</strong> Scored 530 in English and 710 in Math, showcasing strong problem-solving and analytical skills.
                     </li>
                 </ul>
             </div>
@@ -624,7 +624,7 @@
                 <div class="contact-info">
                     <p><strong>Address:</strong> Wiertnicza, Warsaw, Poland</p>
                     <p><strong>Email:</strong> <a href="mailto:bekforov@gmail.com">bekforov@gmail.com</a></p>
-                    <p><strong>LinkedIn:</strong> <a href="https://linkedin.com/in/ogabekgafforov" target="_blank">linkedin.com/in/ogabekgafforov</a></p>
+                    <p><strong>LinkedIn:</strong> <a href="linkedin.com/in/bek-forov-506aa92a5" target="_blank">linkedin.com/in/ogabekgafforov</a></p>
                 </div>
                 
                 <div class="contact-form">
