Updated HTML content

--- a/index.html
+++ b/index.html
@@ -439,7 +439,7 @@
                 <h2>Work Experience</h2>
                 
                 <div class="experience-item">
-                    <h3>Video Game Tester</h3>
+                    <h3>Data Analyst</h3>
                     <div class="experience-meta">
                         <span>George Dimov CPA, New York, United States</span>
                         <span>May 2024 – Present</span>
