--- a/index.html
+++ b/index.html
@@ -412,7 +412,7 @@
                 <a href="#contact" class="btn">Get in Touch</a>
             </div>
             <div class="hero-image">
-                <img src="=bek.JPG" alt="Ogabek Gafforov" />
+                <img src="=Croppedd.JPG" alt="Ogabek Gafforov" />
             </div>
         </section>
         
